FIXED BACKDROP ON MOBILE NAV

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -19,16 +19,18 @@
     text-align: center;
 }
 
-.backdrop {
+.backdrop,
+.backdropModal {
     background-color: #31333bd3;
     width: 100vw;
     height: 100vh;
     position: fixed;
-    z-index: 999;
+    z-index: 8;
     display: none;
 }
 
-.backdrop.visibleBackdrop {
+.backdrop.visibleBackdrop,
+.backdropModal.visibleBackdropModal {
     display: unset;
 }
 
