--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -15,8 +15,11 @@
         justify-content: space-between;
         flex-wrap: wrap;
         gap: 10px;
-
-        
+        width: 100%;
+        height: 940px;
+        overflow: hidden;
+        position: relative;
+        transition:  0.3s ease;
 
         .projectContainerWorldCuisine {
             background-image: url("../../../assets/portfolioImg/worldCuisineSmall.webp");
@@ -56,10 +59,40 @@
 
         .projectContainerCocktails {
             background-image: url("../../../assets/portfolioImg/Cocktails.webp");
-        }       
+        } 
+        .seeMoreProjectsBtn {
+            position: absolute;
+            left: 0px;
+            right: 0px;
+            bottom: 0px;
+            color: variables.$primaryBg;
+            background-color: variables.$tertinary;
+            padding: 8px 20px;
+            margin: 25px auto;
+            border: none;
+            cursor: pointer;
+            z-index: 1;
+            &:hover,
+            &:focus {
+                color: variables.$tertinary;
+                background-color: variables.$primaryBg;
+            }
+        }
+        &::after {
+            position: absolute;
+            content: "";
+            left: 0px;
+            right: 0px;
+            bottom: 0px;
+            width: 100%;
+            height: 120px;
+            background: variables.$secondaryBg;
+        }
     }   
-
-
+    .showAllProjects {
+        height: auto!important;
+        transition: 0.3s ease;
+    }
 }
 
 .projectContainer {
@@ -71,6 +104,7 @@
     margin: 25px auto 0;
     // transition: all 0.3 ease;
     cursor: pointer;
+    position: relative;
 
     .details {
         width: 100%;
